fix button spacing
web development.mov.tga.gif

[#88978056]

--- a/web/public/main.css
+++ b/web/public/main.css
@@ -31,11 +31,6 @@ nav .groups {
   z-index: 2;
 }
 
-nav .groups li.main i {
-  position: relative;
-  bottom: -2px;
-}
-
 nav .groups li {
   display: inline-block;
 }
@@ -91,19 +86,17 @@ nav .groups li a {
 .build-header .abort-build button {
   background: transparent;
   border: none;
-  font-family: inherit;
-  font-size: 30px;
-  cursor: pointer;
-  margin: 10px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+  margin: 10px 10px 0 0;
+  padding: 0;
 }
 
-.build-header .abort-build button i,
-.build-header .trigger-build button i {
-  position: relative;
-  bottom: -2px;
+.build-header .trigger-build i,
+.build-header .abort-build i {
+  width: 40px;
+  line-height: 40px;
+  border-radius: 50%;
+  font-size: 30px;
+  cursor: pointer;
 }
 
 .build-header .trigger-build button:active,
@@ -114,7 +107,7 @@ nav .groups li a {
 }
 
 .build-header .abort-build button {
-  margin: 10px 0;
+  margin: 10px;
 }
 
 #cli-downloads {
